sumo/tests/dfrouter/errors/detector_files/broken_detectors_file1j/errors.dfrouter
Error: Unknown lane '' for detector 'MQ11Fs2' in 'input_messstrecke.det.xml'.
Quitting (on error).
